fix vertical overflow in sidenav-content

--- a/src/app/api-doc/single-service-doc/single-service-doc.component.css
+++ b/src/app/api-doc/single-service-doc/single-service-doc.component.css
@@ -16,7 +16,3 @@
  *
  */
 
-.content {
-    height: calc(100% - 64px);
-    overflow-y: auto;
-}
