--- a/src/app/core/components/sidenav/sidenav.component.css
+++ b/src/app/core/components/sidenav/sidenav.component.css
@@ -106,6 +106,10 @@ mat-sidenav-container {
     min-width: 100%;
 }
 
+mat-sidenav-content {
+    height: calc(100% - 64px);
+}
+
 .side-menu[_ngcontent-c2] > li[_ngcontent-c2]:first-child {
     border-top: 0px;
 }
