--- a/src/app/permissions/permissions-list/permissions-list.component.css
+++ b/src/app/permissions/permissions-list/permissions-list.component.css
@@ -16,10 +16,6 @@
  *
  */
 
-.permission-list-content {
-    height: calc(100% - 105px);
-}
-
 .search {
     display: flex;
     align-items: center;
